--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             en: [
                 {
                     type: "intro",
-                    bg: "https://builtin.com/sites/www.builtin.com/files/2023-02/battery-hardware-new-battery-technologies.png",
+                    bg: "avatar.jpg",
                     sideImg: "avatar.jpg", 
                     title: "Hello, I am Umesh Yadneshwar Joshi",
                     subtitle: "M.Eng. in Renewable Energies & E-Mobility",
