--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 },
                 {
                     type: "content",
-                    bg: "https://prod.tvmimageservice.com/images/GetLibraryImage?fileNameOrId=682994",
+                    bg: "MB_Car.jpg",
                     sideImg: "https://www.evspecifications.com/images/news/b27d2d7/additional_1.jpg",
                     title: "Mercedes-Benz AG, Stuttgart, Germany",
                     role: "Master Thesis: Modeling and Prediction of Voltage Relaxation Behavior in Lithium-Ion Batteries (12.2024 – 07.2025, Grade: 1.0)",
