--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 {
                     type: "content",
                     bg: "MB_Car.jpg",
-                    sideImg: "https://www.evspecifications.com/images/news/b27d2d7/additional_1.jpg",
+                    sideImg: "Thesis.jpg",
                     title: "Mercedes-Benz AG, Stuttgart, Germany",
                     role: "Master Thesis: Modeling and Prediction of Voltage Relaxation Behavior in Lithium-Ion Batteries (12.2024 – 07.2025, Grade: 1.0)",
                     details: "• In-depth research on various relaxation models for electrochemical systems.<br>• Developed an advanced relaxation model for Lithium-Ion Batteries using modern Python frameworks.<br>• Implemented an adaptive optimization algorithm based on experimental data, improving model accuracy by 80–85%.<br>• Applied and evaluated the gradient-based CyIPOPT method for enhanced model validation and performance.<br>• Significantly improved SOC estimation accuracy for more reliable and predictive battery performance assessment."
