--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             en: [
                 {
                     type: "intro",
-                    bg: "avatar.jpg",
+                    bg: "E_Mobility.jpg",
                     sideImg: "avatar.jpg", 
                     title: "Hello, I am Umesh Yadneshwar Joshi",
                     subtitle: "M.Eng. in Renewable Energies & E-Mobility",
