--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
                 
                 if (slide.type === 'intro') {
                     html += `
-                        <img src="${slide.sideImg}" class="profile-photo" alt="Profile">
+                        <!-- <img src="${slide.sideImg}" class="profile-photo" alt="Profile"> -->
                         <h1>${slide.title}</h1>
                         <h2>${slide.subtitle}</h2>
                         <p>${slide.text}</p>
