--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
             de: [
                 {
                     type: "intro",
-                    bg: "https://builtin.com/sites/www.builtin.com/files/2023-02/battery-hardware-new-battery-technologies.png",
+                    bg: "E_Mobility.jpg",
                     sideImg: "avatar.jpg",
                     title: "Hallo, ich bin Umesh Yadneshwar Joshi",
                     subtitle: "M.Eng. Erneuerbare Energien & E-Mobilität",
