--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                 },
                 {
                     type: "content",
-                    bg: "https://i.ytimg.com/vi/HqLSffcruVI/maxresdefault.jpg",
+                    bg: "Highvoltage.jpg",
                     sideImg: "https://cdn.comsol.com/product-new/battery-design-module/full/battery-pack-design-module-hero.png",
                     title: "Mercedes-Benz AG, Stuttgart, Germany",
                     role: "Working Student in High-Voltage Battery Development, System Pre-Development (02.2024 – 11.2024)",
@@ -477,7 +477,7 @@
                 },
                 {
                     type: "content",
-                    bg: "https://i.ytimg.com/vi/HqLSffcruVI/maxresdefault.jpg",
+                    bg: "Highvoltage.jpg",
                     sideImg: "https://cdn.comsol.com/product-new/battery-design-module/full/battery-pack-design-module-hero.png",
                     title: "Mercedes-Benz AG, Stuttgart, Deutschland",
                     role: "Werkstudent in der Hochvolt Batterieentwicklung im Bereich System Vorentwicklung (02.2024 – 11.2024)",
