--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 {
                     type: "content",
                     bg: "EK_background.jpg",
-                    sideImg: "testing.jpg",
+                    sideImg: "testing.jpeg",
                     title: "ElringKlinger AG, Neuffen, Stuttgart, Germany",
                     role: "Intern: Battery System Tests and Validation (05.2023 – 11.2023)",
                     details: "• Performed tests and validation of battery systems, ECUs, and drives to ensure performance and safety standards.<br>• Conducted impedance measurements on aluminum foils and around the battery.<br>• Created test protocols and documented test results."
@@ -494,7 +494,7 @@
                 {
                     type: "content",
                     bg: "EK_background.jpg",
-                    sideImg: "testing.jpg",
+                    sideImg: "testing.jpeg",
                     title: "ElringKlinger AG, Neuffen, Stuttgart, Deutschland",
                     role: "Praktikant: Batterie-Systemtests und Validierung (05.2023 – 11.2023)",
                     details: "• Tests und Validierung von Batteriesystemen, ECUs und Antrieben zur Sicherstellung von Leistung- und Sicherheitsstandards.<br>• Impedanzmessungen an Aluminiumfolien und um die Batterie.<br>• Erstellung von Testprotokollen und Dokumentation der Testergebnisse."
