--- a/index.html
+++ b/index.html
@@ -265,34 +265,17 @@
 
     <div id="screen-hello" class="screen active">
         <div class="hello-cloud">
-           <div class="circle-container">
-
-            <span class="cloud-word" style="transform: rotate(0deg);">Hello</span>
-            <span class="cloud-word" style="transform: rotate(14.4deg);">नमस्ते</span>
-            <span class="cloud-word" style="transform: rotate(28.8deg);">नमस्कार</span>
-            <span class="cloud-word" style="transform: rotate(43.2deg);">Bonjour</span>
-            <span class="cloud-word" style="transform: rotate(57.6deg);">Hola</span>
-            <span class="cloud-word" style="transform: rotate(72deg);">Ciao</span>
-            <span class="cloud-word" style="transform: rotate(86.4deg);">こんにちは</span>
-            <span class="cloud-word" style="transform: rotate(100.8deg);">안녕하세요</span>
-            <span class="cloud-word" style="transform: rotate(115.2deg);">你好</span>
-            <span class="cloud-word" style="transform: rotate(129.6deg);">مرحبا</span>
-            <span class="cloud-word" style="transform: rotate(144deg);">Olá</span>
-            <span class="cloud-word" style="transform: rotate(158.4deg);">Привет</span>
-            <span class="cloud-word" style="transform: rotate(172.8deg);">שלום</span>
-            <span class="cloud-word" style="transform: rotate(187.2deg);">Jambo</span>
-            <span class="cloud-word" style="transform: rotate(201.6deg);">ਸਤ ਸ੍ਰੀ ਅਕਾਲ</span>
-            <span class="cloud-word" style="transform: rotate(216deg);">வணக்கம்</span>
-            <span class="cloud-word" style="transform: rotate(230.4deg);">สวัสดี</span>
-            <span class="cloud-word" style="transform: rotate(244.8deg);">Selamat</span>
-            <span class="cloud-word" style="transform: rotate(259.2deg);">Hej</span>
-            <span class="cloud-word" style="transform: rotate(273.6deg);">Merhaba</span>
-            <span class="cloud-word" style="transform: rotate(288deg);">Ahoj</span>
-            <span class="cloud-word" style="transform: rotate(302.4deg);">Sawubona</span>
-            <span class="cloud-word" style="transform: rotate(316.8deg);">Habari</span>
-            <span class="cloud-word" style="transform: rotate(331.2deg);">Dia dhuit</span>
-            <span class="cloud-word" style="transform: rotate(345.6deg);">Salve</span>
-
+            <span class="cloud-word w-main">Hello</span>
+            <span class="cloud-word w-1">Namaskar</span>
+            <span class="cloud-word w-2">Bonjour</span>
+            <span class="cloud-word w-3">Hallo</span>
+            <span class="cloud-word w-4">Hola</span>
+            <span class="cloud-word w-5">Ciao</span>
+            <span class="cloud-word w-6">Salaam</span>
+            <span class="cloud-word w-7">Guten Tag</span>
+            <span class="cloud-word w-8">Konnichiwa</span>
+            <span class="cloud-word w-9">Jambo</span>
+            <span class="cloud-word w-10">Zdravstvuyte</span>
         </div>
         <div class="welcome-line">Welcome to My Battery Engineering Portfolio</div>
         <button class="start-btn" onclick="goToLanguages()">Start &#8594;</button>
