--- a/index.html
+++ b/index.html
@@ -115,6 +115,16 @@
         .w-18 { bottom: 30%; right: 5%; font-size: 1.2rem; animation-delay: 1.6s; }
         .w-19 { top: 50%; left: 5%; font-size: 1.9rem; animation-delay: 1.8s; }
         .w-20 { top: 50%; right: 5%; font-size: 1.1rem; transform: rotate(15deg); animation-delay: 2.0s; }
+        .w-21 { top: 0%; left: 40%; font-size: 1.7rem; animation-delay: 0.1s; }
+        .w-22 { top: 0%; right: 40%; font-size: 1.3rem; transform: rotate(10deg); animation-delay: 0.3s; }
+        .w-23 { bottom: 0%; left: 40%; font-size: 2rem; animation-delay: 0.5s; }
+        .w-24 { bottom: 0%; right: 40%; font-size: 1.6rem; animation-delay: 0.7s; }
+        .w-25 { top: 30%; left: 0%; font-size: 1.4rem; transform: rotate(-80deg); animation-delay: 0.9s; }
+        .w-26 { top: 30%; right: 0%; font-size: 1.8rem; animation-delay: 1.1s; }
+        .w-27 { bottom: 40%; left: 0%; font-size: 1.5rem; transform: rotate(80deg); animation-delay: 1.3s; }
+        .w-28 { bottom: 40%; right: 0%; font-size: 1.2rem; animation-delay: 1.5s; }
+        .w-29 { top: 70%; left: 10%; font-size: 1.9rem; animation-delay: 1.7s; }
+        .w-30 { top: 70%; right: 10%; font-size: 1.1rem; transform: rotate(15deg); animation-delay: 1.9s; }
         .welcome-line {
             margin-top: 2rem;
             font-size: 1.5rem;
@@ -242,24 +252,34 @@
             <span class="cloud-word w-main">Hallo</span>
             <span class="cloud-word w-1">नमस्कार</span>
             <span class="cloud-word w-2">Bonjour</span>
-            <span class="cloud-word w-3">Hello</span>
-            <span class="cloud-word w-4">Hola</span>
-            <span class="cloud-word w-5">Ciao</span>
-            <span class="cloud-word w-6">سلام</span>
-            <span class="cloud-word w-7">Guten Tag</span>
-            <span class="cloud-word w-8">こんにちは</span>
-            <span class="cloud-word w-9">Jambo</span>
-            <span class="cloud-word w-10">Здравствуйте</span>
-            <span class="cloud-word w-11">你好</span>
-            <span class="cloud-word w-12">안녕하세요</span>
-            <span class="cloud-word w-13">Olá</span>
-            <span class="cloud-word w-14">Hej</span>
-            <span class="cloud-word w-15">Merhaba</span>
-            <span class="cloud-word w-16">שלום</span>
-            <span class="cloud-word w-17">Γεια</span>
-            <span class="cloud-word w-18">สวัสดี</span>
-            <span class="cloud-word w-19">Halo</span>
-            <span class="cloud-word w-20">Привет</span>
+            <span class="cloud-word w-3">Hola</span>
+            <span class="cloud-word w-4">Ciao</span>
+            <span class="cloud-word w-5">Olá</span>
+            <span class="cloud-word w-6">Hej</span>
+            <span class="cloud-word w-7">Cześć</span>
+            <span class="cloud-word w-8">Привет</span>
+            <span class="cloud-word w-9">Γεια</span>
+            <span class="cloud-word w-10">Merhaba</span>
+            <span class="cloud-word w-11">Hei</span>
+            <span class="cloud-word w-12">Ahoj</span>
+            <span class="cloud-word w-13">Szia</span>
+            <span class="cloud-word w-14">Salut</span>
+            <span class="cloud-word w-15">你好</span>
+            <span class="cloud-word w-16">こんにちは</span>
+            <span class="cloud-word w-17">안녕하세요</span>
+            <span class="cloud-word w-18">नमस्ते</span>
+            <span class="cloud-word w-19">مرحبا</span>
+            <span class="cloud-word w-20">Jambo</span>
+            <span class="cloud-word w-21">Hello</span>
+            <span class="cloud-word w-22">Bon dia</span>
+            <span class="cloud-word w-23">Dia dhuit</span>
+            <span class="cloud-word w-24">Labas</span>
+            <span class="cloud-word w-25">Tere</span>
+            <span class="cloud-word w-26">Zdravo</span>
+            <span class="cloud-word w-27">Bok</span>
+            <span class="cloud-word w-28">Здравей</span>
+            <span class="cloud-word w-29">Labdien</span>
+            <span class="cloud-word w-30">Sveiki</span>
         </div>
         <div class="welcome-line">Welcome to My Battery Engineering Portfolio</div>
         <button class="start-btn" onclick="goToLanguages()">Start &#8594;</button>
