--- a/index.html
+++ b/index.html
@@ -94,37 +94,37 @@
             50% { text-shadow: 0 0 30px rgba(52, 152, 219, 0.6); }
             100% { text-shadow: 0 0 20px rgba(255,255,255,0.4); }
         }
-        /* Scattered words */
-        .w-1 { top: 20%; left: 20%; font-size: 1.5rem; transform: rotate(-10deg); animation-delay: 0.5s; }
-        .w-2 { top: 15%; right: 25%; font-size: 2rem; animation-delay: 1s; }
-        .w-3 { bottom: 25%; left: 15%; font-size: 2.5rem; font-family: serif; animation-delay: 1.5s; }
-        .w-4 { bottom: 20%; right: 20%; font-size: 1.8rem; transform: rotate(5deg); animation-delay: 2s; }
-        .w-5 { top: 40%; left: 10%; font-size: 1.4rem; transform: rotate(-90deg); animation-delay: 2.5s; }
-        .w-6 { top: 35%; right: 10%; font-size: 1.6rem; opacity: 0.7; animation-delay: 3s; }
-        .w-7 { bottom: 10%; left: 40%; font-size: 1.8rem; animation-delay: 3.5s; }
-        .w-8 { top: 10%; left: 45%; font-size: 1.5rem; animation-delay: 4s; }
-        .w-9 { top: 60%; right: 5%; font-size: 1.5rem; transform: rotate(90deg); animation-delay: 4.5s; }
-        .w-10 { top: 60%; left: 25%; font-size: 1.2rem; animation-delay: 5s; }
-        .w-11 { top: 5%; left: 30%; font-size: 1.7rem; animation-delay: 0.2s; }
-        .w-12 { top: 5%; right: 30%; font-size: 1.3rem; transform: rotate(10deg); animation-delay: 0.4s; }
-        .w-13 { bottom: 5%; left: 30%; font-size: 2rem; animation-delay: 0.6s; }
-        .w-14 { bottom: 5%; right: 30%; font-size: 1.6rem; animation-delay: 0.8s; }
-        .w-15 { top: 25%; left: 5%; font-size: 1.4rem; transform: rotate(-80deg); animation-delay: 1.0s; }
-        .w-16 { top: 25%; right: 5%; font-size: 1.8rem; animation-delay: 1.2s; }
-        .w-17 { bottom: 30%; left: 5%; font-size: 1.5rem; transform: rotate(80deg); animation-delay: 1.4s; }
-        .w-18 { bottom: 30%; right: 5%; font-size: 1.2rem; animation-delay: 1.6s; }
-        .w-19 { top: 50%; left: 5%; font-size: 1.9rem; animation-delay: 1.8s; }
-        .w-20 { top: 50%; right: 5%; font-size: 1.1rem; transform: rotate(15deg); animation-delay: 2.0s; }
-        .w-21 { top: 0%; left: 40%; font-size: 1.7rem; animation-delay: 0.1s; }
-        .w-22 { top: 0%; right: 40%; font-size: 1.3rem; transform: rotate(10deg); animation-delay: 0.3s; }
-        .w-23 { bottom: 0%; left: 40%; font-size: 2rem; animation-delay: 0.5s; }
-        .w-24 { bottom: 0%; right: 40%; font-size: 1.6rem; animation-delay: 0.7s; }
-        .w-25 { top: 30%; left: 0%; font-size: 1.4rem; transform: rotate(-80deg); animation-delay: 0.9s; }
-        .w-26 { top: 30%; right: 0%; font-size: 1.8rem; animation-delay: 1.1s; }
-        .w-27 { bottom: 40%; left: 0%; font-size: 1.5rem; transform: rotate(80deg); animation-delay: 1.3s; }
-        .w-28 { bottom: 40%; right: 0%; font-size: 1.2rem; animation-delay: 1.5s; }
-        .w-29 { top: 70%; left: 10%; font-size: 1.9rem; animation-delay: 1.7s; }
-        .w-30 { top: 70%; right: 10%; font-size: 1.1rem; transform: rotate(15deg); animation-delay: 1.9s; }
+        /* Scattered words in circle */
+        .w-1 { top: 50.00%; left: 85.00%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 0.1s; }
+        .w-2 { top: 42.72%; left: 84.24%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 0.2s; }
+        .w-3 { top: 35.76%; left: 81.97%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 0.3s; }
+        .w-4 { top: 29.43%; left: 78.32%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 0.4s; }
+        .w-5 { top: 23.99%; left: 73.42%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 0.5s; }
+        .w-6 { top: 19.69%; left: 67.50%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 0.6s; }
+        .w-7 { top: 16.71%; left: 60.82%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 0.7s; }
+        .w-8 { top: 15.19%; left: 53.66%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 0.8s; }
+        .w-9 { top: 15.19%; left: 46.34%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 0.9s; }
+        .w-10 { top: 16.71%; left: 39.18%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.0s; }
+        .w-11 { top: 19.69%; left: 32.50%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.1s; }
+        .w-12 { top: 23.99%; left: 26.58%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.2s; }
+        .w-13 { top: 29.43%; left: 21.68%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.3s; }
+        .w-14 { top: 35.76%; left: 18.03%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.4s; }
+        .w-15 { top: 42.72%; left: 15.76%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.5s; }
+        .w-16 { top: 50.00%; left: 15.00%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.6s; }
+        .w-17 { top: 57.28%; left: 15.76%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.7s; }
+        .w-18 { top: 64.24%; left: 18.03%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.8s; }
+        .w-19 { top: 70.57%; left: 21.68%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.9s; }
+        .w-20 { top: 76.01%; left: 26.58%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.0s; }
+        .w-21 { top: 80.31%; left: 32.50%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.1s; }
+        .w-22 { top: 83.29%; left: 39.18%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.2s; }
+        .w-23 { top: 84.81%; left: 46.34%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.3s; }
+        .w-24 { top: 84.81%; left: 53.66%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.4s; }
+        .w-25 { top: 83.29%; left: 60.82%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.5s; }
+        .w-26 { top: 80.31%; left: 67.50%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.6s; }
+        .w-27 { top: 76.01%; left: 73.42%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.7s; }
+        .w-28 { top: 70.57%; left: 78.32%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.8s; }
+        .w-29 { top: 64.24%; left: 81.97%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.9s; }
+        .w-30 { top: 57.28%; left: 84.24%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 3.0s; }
         .welcome-line {
             margin-top: 2rem;
             font-size: 1.5rem;
