--- a/index.html
+++ b/index.html
@@ -94,37 +94,37 @@
             50% { text-shadow: 0 0 30px rgba(52, 152, 219, 0.6); }
             100% { text-shadow: 0 0 20px rgba(255,255,255,0.4); }
         }
-        /* Scattered words in circle */
-        .w-1 { top: 50.00%; left: 85.00%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 0.1s; }
-        .w-2 { top: 42.72%; left: 84.24%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 0.2s; }
-        .w-3 { top: 35.76%; left: 81.97%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 0.3s; }
-        .w-4 { top: 29.43%; left: 78.32%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 0.4s; }
-        .w-5 { top: 23.99%; left: 73.42%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 0.5s; }
-        .w-6 { top: 19.69%; left: 67.50%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 0.6s; }
-        .w-7 { top: 16.71%; left: 60.82%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 0.7s; }
-        .w-8 { top: 15.19%; left: 53.66%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 0.8s; }
-        .w-9 { top: 15.19%; left: 46.34%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 0.9s; }
-        .w-10 { top: 16.71%; left: 39.18%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.0s; }
-        .w-11 { top: 19.69%; left: 32.50%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.1s; }
-        .w-12 { top: 23.99%; left: 26.58%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.2s; }
-        .w-13 { top: 29.43%; left: 21.68%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.3s; }
-        .w-14 { top: 35.76%; left: 18.03%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.4s; }
-        .w-15 { top: 42.72%; left: 15.76%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.5s; }
-        .w-16 { top: 50.00%; left: 15.00%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.6s; }
-        .w-17 { top: 57.28%; left: 15.76%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.7s; }
-        .w-18 { top: 64.24%; left: 18.03%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.8s; }
-        .w-19 { top: 70.57%; left: 21.68%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 1.9s; }
-        .w-20 { top: 76.01%; left: 26.58%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.0s; }
-        .w-21 { top: 80.31%; left: 32.50%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.1s; }
-        .w-22 { top: 83.29%; left: 39.18%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.2s; }
-        .w-23 { top: 84.81%; left: 46.34%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.3s; }
-        .w-24 { top: 84.81%; left: 53.66%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.4s; }
-        .w-25 { top: 83.29%; left: 60.82%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.5s; }
-        .w-26 { top: 80.31%; left: 67.50%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.6s; }
-        .w-27 { top: 76.01%; left: 73.42%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.7s; }
-        .w-28 { top: 70.57%; left: 78.32%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.8s; }
-        .w-29 { top: 64.24%; left: 81.97%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 2.9s; }
-        .w-30 { top: 57.28%; left: 84.24%; transform: translate(-50%, -50%); font-size: 1.3rem; animation-delay: 3.0s; }
+        .cloud-word:not(.w-main) { font-size: 1.2rem; }
+        .w-1 { top: 50.0%; left: 90.0%; transform: translate(-50%, -50%) rotate(-1deg); animation-delay: 0.0s; }
+        .w-2 { top: 73.51%; left: 82.36%; transform: translate(-50%, -50%) rotate(13deg); animation-delay: 0.1s; }
+        .w-3 { top: 88.04%; left: 62.36%; transform: translate(-50%, -50%) rotate(7deg); animation-delay: 0.2s; }
+        .w-4 { top: 88.04%; left: 37.64%; transform: translate(-50%, -50%) rotate(12deg); animation-delay: 0.30000000000000004s; }
+        .w-5 { top: 73.51%; left: 17.64%; transform: translate(-50%, -50%) rotate(10deg); animation-delay: 0.4s; }
+        .w-6 { top: 50.0%; left: 10.0%; transform: translate(-50%, -50%) rotate(-15deg); animation-delay: 0.5s; }
+        .w-7 { top: 26.49%; left: 17.64%; transform: translate(-50%, -50%) rotate(15deg); animation-delay: 0.6000000000000001s; }
+        .w-8 { top: 11.96%; left: 37.64%; transform: translate(-50%, -50%) rotate(-3deg); animation-delay: 0.7000000000000001s; }
+        .w-9 { top: 11.96%; left: 62.36%; transform: translate(-50%, -50%) rotate(-2deg); animation-delay: 0.8s; }
+        .w-10 { top: 26.49%; left: 82.36%; transform: translate(-50%, -50%) rotate(11deg); animation-delay: 0.9s; }
+        .w-11 { top: 59.27%; left: 78.53%; transform: translate(-50%, -50%) rotate(13deg); animation-delay: 1.0s; }
+        .w-12 { top: 74.27%; left: 67.63%; transform: translate(-50%, -50%) rotate(6deg); animation-delay: 1.1s; }
+        .w-13 { top: 80.0%; left: 50.0%; transform: translate(-50%, -50%) rotate(-10deg); animation-delay: 1.2000000000000002s; }
+        .w-14 { top: 74.27%; left: 32.37%; transform: translate(-50%, -50%) rotate(3deg); animation-delay: 1.3s; }
+        .w-15 { top: 59.27%; left: 21.47%; transform: translate(-50%, -50%) rotate(8deg); animation-delay: 1.4000000000000001s; }
+        .w-16 { top: 40.73%; left: 21.47%; transform: translate(-50%, -50%) rotate(-8deg); animation-delay: 1.5s; }
+        .w-17 { top: 25.73%; left: 32.37%; transform: translate(-50%, -50%) rotate(-4deg); animation-delay: 1.6s; }
+        .w-18 { top: 20.0%; left: 50.0%; transform: translate(-50%, -50%) rotate(-5deg); animation-delay: 1.7000000000000002s; }
+        .w-19 { top: 25.73%; left: 67.63%; transform: translate(-50%, -50%) rotate(6deg); animation-delay: 1.8s; }
+        .w-20 { top: 40.73%; left: 78.53%; transform: translate(-50%, -50%) rotate(8deg); animation-delay: 1.9000000000000001s; }
+        .w-21 { top: 53.13%; left: 69.75%; transform: translate(-50%, -50%) rotate(0deg); animation-delay: 2.0s; }
+        .w-22 { top: 64.14%; left: 64.14%; transform: translate(-50%, -50%) rotate(7deg); animation-delay: 2.1s; }
+        .w-23 { top: 69.75%; left: 53.13%; transform: translate(-50%, -50%) rotate(-8deg); animation-delay: 2.2s; }
+        .w-24 { top: 67.82%; left: 40.92%; transform: translate(-50%, -50%) rotate(-10deg); animation-delay: 2.3000000000000003s; }
+        .w-25 { top: 59.08%; left: 32.18%; transform: translate(-50%, -50%) rotate(15deg); animation-delay: 2.4000000000000004s; }
+        .w-26 { top: 46.87%; left: 30.25%; transform: translate(-50%, -50%) rotate(-9deg); animation-delay: 2.5s; }
+        .w-27 { top: 35.86%; left: 35.86%; transform: translate(-50%, -50%) rotate(8deg); animation-delay: 2.6s; }
+        .w-28 { top: 30.25%; left: 46.87%; transform: translate(-50%, -50%) rotate(7deg); animation-delay: 2.7s; }
+        .w-29 { top: 32.18%; left: 59.08%; transform: translate(-50%, -50%) rotate(3deg); animation-delay: 2.8000000000000003s; }
+        .w-30 { top: 40.92%; left: 67.82%; transform: translate(-50%, -50%) rotate(-10deg); animation-delay: 2.9000000000000004s; }
         .welcome-line {
             margin-top: 2rem;
             font-size: 1.5rem;
@@ -250,36 +250,36 @@
     <div id="screen-hello" class="screen active">
         <div class="hello-cloud">
             <span class="cloud-word w-main">Hallo</span>
-            <span class="cloud-word w-1">नमस्कार</span>
-            <span class="cloud-word w-2">Bonjour</span>
+            <span class="cloud-word w-1">Hello</span>
+            <span class="cloud-word w-2">Dobriy den</span>
             <span class="cloud-word w-3">Hola</span>
-            <span class="cloud-word w-4">Ciao</span>
-            <span class="cloud-word w-5">Olá</span>
-            <span class="cloud-word w-6">Hej</span>
-            <span class="cloud-word w-7">Cześć</span>
-            <span class="cloud-word w-8">Привет</span>
-            <span class="cloud-word w-9">Γεια</span>
-            <span class="cloud-word w-10">Merhaba</span>
-            <span class="cloud-word w-11">Hei</span>
-            <span class="cloud-word w-12">Ahoj</span>
-            <span class="cloud-word w-13">Szia</span>
-            <span class="cloud-word w-14">Salut</span>
-            <span class="cloud-word w-15">你好</span>
-            <span class="cloud-word w-16">こんにちは</span>
-            <span class="cloud-word w-17">안녕하세요</span>
-            <span class="cloud-word w-18">नमस्ते</span>
-            <span class="cloud-word w-19">مرحبا</span>
-            <span class="cloud-word w-20">Jambo</span>
-            <span class="cloud-word w-21">Hello</span>
-            <span class="cloud-word w-22">Bon dia</span>
-            <span class="cloud-word w-23">Dia dhuit</span>
-            <span class="cloud-word w-24">Labas</span>
-            <span class="cloud-word w-25">Tere</span>
-            <span class="cloud-word w-26">Zdravo</span>
-            <span class="cloud-word w-27">Bok</span>
-            <span class="cloud-word w-28">Здравей</span>
-            <span class="cloud-word w-29">Labdien</span>
-            <span class="cloud-word w-30">Sveiki</span>
+            <span class="cloud-word w-4">Bonjour</span>
+            <span class="cloud-word w-5">Zdravstvuyte</span>
+            <span class="cloud-word w-6">Olá</span>
+            <span class="cloud-word w-7">Hallo</span>
+            <span class="cloud-word w-8">Hej</span>
+            <span class="cloud-word w-9">Tere</span>
+            <span class="cloud-word w-10">Ciao</span>
+            <span class="cloud-word w-11">Ahoj</span>
+            <span class="cloud-word w-12">Zdraveĭte</span>
+            <span class="cloud-word w-13">Góðan dag</span>
+            <span class="cloud-word w-14">Jó napot</span>
+            <span class="cloud-word w-15">Geia sas</span>
+            <span class="cloud-word w-16">Sveiki</span>
+            <span class="cloud-word w-17">Bok</span>
+            <span class="cloud-word w-18">Ahoj</span>
+            <span class="cloud-word w-19">Moïen</span>
+            <span class="cloud-word w-20">안녕하세요</span>
+            <span class="cloud-word w-21">नमस्ते</span>
+            <span class="cloud-word w-22">Zdravstvujtie</span>
+            <span class="cloud-word w-23">Hei</span>
+            <span class="cloud-word w-24">Hallo</span>
+            <span class="cloud-word w-25">Hallå</span>
+            <span class="cloud-word w-26">Cześć</span>
+            <span class="cloud-word w-27">Bongu</span>
+            <span class="cloud-word w-28">Salut</span>
+            <span class="cloud-word w-29">你好</span>
+            <span class="cloud-word w-30">こんにちは</span>
         </div>
         <div class="welcome-line">Welcome to My Battery Engineering Portfolio</div>
         <button class="start-btn" onclick="goToLanguages()">Start &#8594;</button>
