--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
             100% { text-shadow: 0 0 20px rgba(255,255,255,0.4); }
         }
         .cloud-word:not(.w-main) { font-size: 1.2rem; }
+        .cloud-word:nth-child(odd):not(.w-main) { font-size: 1.2rem; }
+        .cloud-word:nth-child(even):not(.w-main) { font-size: 1.4rem; }
         .w-1 { top: 50.0%; left: 90.0%; transform: translate(-50%, -50%) rotate(-1deg); animation-delay: 0.0s; }
         .w-2 { top: 73.51%; left: 82.36%; transform: translate(-50%, -50%) rotate(13deg); animation-delay: 0.1s; }
         .w-3 { top: 88.04%; left: 62.36%; transform: translate(-50%, -50%) rotate(7deg); animation-delay: 0.2s; }
@@ -125,6 +127,7 @@
         .w-28 { top: 30.25%; left: 46.87%; transform: translate(-50%, -50%) rotate(7deg); animation-delay: 2.7s; }
         .w-29 { top: 32.18%; left: 59.08%; transform: translate(-50%, -50%) rotate(3deg); animation-delay: 2.8000000000000003s; }
         .w-30 { top: 40.92%; left: 67.82%; transform: translate(-50%, -50%) rotate(-10deg); animation-delay: 2.9000000000000004s; }
+        .w-21 { font-size: 2rem !important; top: 55%; left: 55%; }
         .welcome-line {
             margin-top: 2rem;
             font-size: 1.5rem;
@@ -270,7 +273,7 @@
             <span class="cloud-word w-18">Ahoj</span>
             <span class="cloud-word w-19">Moïen</span>
             <span class="cloud-word w-20">안녕하세요</span>
-            <span class="cloud-word w-21">नमस्ते</span>
+            <span class="cloud-word w-21">नमस्कार</span>
             <span class="cloud-word w-22">Zdravstvujtie</span>
             <span class="cloud-word w-23">Hei</span>
             <span class="cloud-word w-24">Hallo</span>
