--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         .w-28 { top: 30.25%; left: 46.87%; transform: translate(-50%, -50%) rotate(7deg); animation-delay: 2.7s; }
         .w-29 { top: 32.18%; left: 59.08%; transform: translate(-50%, -50%) rotate(3deg); animation-delay: 2.8000000000000003s; }
         .w-30 { top: 40.92%; left: 67.82%; transform: translate(-50%, -50%) rotate(-10deg); animation-delay: 2.9000000000000004s; }
-        .w-21 { font-size: 2rem !important; top: 55%; left: 55%; }
+        .w-21 { font-size: 4rem !important; top: 55%; left: 60%; }
         .welcome-line {
             margin-top: 2rem;
             font-size: 1.5rem;
@@ -254,12 +254,12 @@
         <div class="hello-cloud">
             <span class="cloud-word w-main">Hallo</span>
             <span class="cloud-word w-1">Hello</span>
-            <span class="cloud-word w-2">Dobriy den</span>
+            <span class="cloud-word w-2">Servus</span>
             <span class="cloud-word w-3">Hola</span>
             <span class="cloud-word w-4">Bonjour</span>
             <span class="cloud-word w-5">Zdravstvuyte</span>
             <span class="cloud-word w-6">Olá</span>
-            <span class="cloud-word w-7">Hallo</span>
+            <span class="cloud-word w-7">नमस्ते</span>
             <span class="cloud-word w-8">Hej</span>
             <span class="cloud-word w-9">Tere</span>
             <span class="cloud-word w-10">Ciao</span>
@@ -273,14 +273,14 @@
             <span class="cloud-word w-18">Ahoj</span>
             <span class="cloud-word w-19">Moïen</span>
             <span class="cloud-word w-20">안녕하세요</span>
-            <span class="cloud-word w-21">नमस्कार</span>
+            <span class="cloud-word w-21">Hello</span>
             <span class="cloud-word w-22">Zdravstvujtie</span>
             <span class="cloud-word w-23">Hei</span>
-            <span class="cloud-word w-24">Hallo</span>
+            <span class="cloud-word w-24">Salve</span>
             <span class="cloud-word w-25">Hallå</span>
             <span class="cloud-word w-26">Cześć</span>
             <span class="cloud-word w-27">Bongu</span>
-            <span class="cloud-word w-28">Salut</span>
+            <span class="cloud-word w-28">नमस्कार</span>
             <span class="cloud-word w-29">你好</span>
             <span class="cloud-word w-30">こんにちは</span>
         </div>
