--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         .w-17 { top: 25.73%; left: 32.37%; transform: translate(-50%, -50%) rotate(-4deg); animation-delay: 1.6s; }
         .w-18 { top: 20.0%; left: 50.0%; transform: translate(-50%, -50%) rotate(-5deg); animation-delay: 1.7000000000000002s; }
         .w-19 { top: 25.73%; left: 67.63%; transform: translate(-50%, -50%) rotate(6deg); animation-delay: 1.8s; }
-        .w-20 { top: 40.73%; left: 78.53%; transform: translate(-50%, -50%) rotate(8deg); animation-delay: 1.9000000000000001s; }
+        .w-20 { top: 45.73%; left: 78.53%; transform: translate(-50%, -50%) rotate(8deg); animation-delay: 1.9000000000000001s; }
         .w-21 { top: 53.13%; left: 69.75%; transform: translate(-50%, -50%) rotate(0deg); animation-delay: 2.0s; }
         .w-22 { top: 64.14%; left: 64.14%; transform: translate(-50%, -50%) rotate(7deg); animation-delay: 2.1s; }
         .w-23 { top: 69.75%; left: 53.13%; transform: translate(-50%, -50%) rotate(-8deg); animation-delay: 2.2s; }
@@ -253,7 +253,7 @@
     <div id="screen-hello" class="screen active">
         <div class="hello-cloud">
             <span class="cloud-word w-main">Hallo</span>
-            <span class="cloud-word w-1">Hello</span>
+            <span class="cloud-word w-1">Guten Tag</span>
             <span class="cloud-word w-2">Servus</span>
             <span class="cloud-word w-3">Hola</span>
             <span class="cloud-word w-4">Bonjour</span>
