--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
         .w-3 { top: 88.04%; left: 62.36%; transform: translate(-50%, -50%) rotate(7deg); animation-delay: 0.2s; }
         .w-4 { top: 88.04%; left: 37.64%; transform: translate(-50%, -50%) rotate(12deg); animation-delay: 0.30000000000000004s; }
         .w-5 { top: 73.51%; left: 17.64%; transform: translate(-50%, -50%) rotate(10deg); animation-delay: 0.4s; }
-        .w-6 { top: 50.0%; left: 10.0%; transform: translate(-50%, -50%) rotate(-15deg); animation-delay: 0.5s; }
+        .w-6 { top: 50.0%; left: 16.0%; transform: translate(-50%, -50%) rotate(-15deg); animation-delay: 0.5s; }
         .w-7 { top: 26.49%; left: 17.64%; transform: translate(-50%, -50%) rotate(15deg); animation-delay: 0.6000000000000001s; }
         .w-8 { top: 11.96%; left: 37.64%; transform: translate(-50%, -50%) rotate(-3deg); animation-delay: 0.7000000000000001s; }
         .w-9 { top: 11.96%; left: 62.36%; transform: translate(-50%, -50%) rotate(-2deg); animation-delay: 0.8s; }
         .w-10 { top: 26.49%; left: 82.36%; transform: translate(-50%, -50%) rotate(11deg); animation-delay: 0.9s; }
-        .w-11 { top: 59.27%; left: 78.53%; transform: translate(-50%, -50%) rotate(13deg); animation-delay: 1.0s; }
+        .w-11 { top: 59.27%; left: 80.53%; transform: translate(-50%, -50%) rotate(13deg); animation-delay: 1.0s; }
         .w-12 { top: 74.27%; left: 67.63%; transform: translate(-50%, -50%) rotate(6deg); animation-delay: 1.1s; }
         .w-13 { top: 80.0%; left: 50.0%; transform: translate(-50%, -50%) rotate(-10deg); animation-delay: 1.2000000000000002s; }
-        .w-14 { top: 74.27%; left: 32.37%; transform: translate(-50%, -50%) rotate(3deg); animation-delay: 1.3s; }
+        .w-14 { top: 77.27%; left: 32.37%; transform: translate(-50%, -50%) rotate(3deg); animation-delay: 1.3s; }
         .w-15 { top: 59.27%; left: 21.47%; transform: translate(-50%, -50%) rotate(8deg); animation-delay: 1.4000000000000001s; }
         .w-16 { top: 40.73%; left: 21.47%; transform: translate(-50%, -50%) rotate(-8deg); animation-delay: 1.5s; }
         .w-17 { top: 25.73%; left: 32.37%; transform: translate(-50%, -50%) rotate(-4deg); animation-delay: 1.6s; }
@@ -121,7 +121,7 @@
         .w-22 { top: 49.01%; left: 66.14%; transform: translate(-50%, -50%) rotate(7deg); animation-delay: 2.1s; }
         .w-23 { top: 69.75%; left: 53.13%; transform: translate(-50%, -50%) rotate(-8deg); animation-delay: 2.2s; }
         .w-24 { top: 67.82%; left: 40.92%; transform: translate(-50%, -50%) rotate(-10deg); animation-delay: 2.3000000000000003s; }
-        .w-25 { top: 59.08%; left: 32.18%; transform: translate(-50%, -50%) rotate(15deg); animation-delay: 2.4000000000000004s; }
+        .w-25 { top: 63.08%; left: 28.18%; transform: translate(-50%, -50%) rotate(15deg); animation-delay: 2.4000000000000004s; }
         .w-26 { top: 46.87%; left: 30.25%; transform: translate(-50%, -50%) rotate(-9deg); animation-delay: 2.5s; }
         .w-27 { top: 35.86%; left: 35.86%; transform: translate(-50%, -50%) rotate(8deg); animation-delay: 2.6s; }
         .w-28 { top: 30.25%; left: 46.87%; transform: translate(-50%, -50%) rotate(7deg); animation-delay: 2.7s; }
@@ -253,17 +253,17 @@
     <div id="screen-hello" class="screen active">
         <div class="hello-cloud">
             <span class="cloud-word w-main">Hallo</span>
-            <span class="cloud-word w-1">Guten Tag</span>
+            <span class="cloud-word w-1">Olá</span>
             <span class="cloud-word w-2">Servus</span>
             <span class="cloud-word w-3">Hola</span>
             <span class="cloud-word w-4">Bonjour</span>
             <span class="cloud-word w-5">Zdravstvuyte</span>
-            <span class="cloud-word w-6">Olá</span>
+            <span class="cloud-word w-6">Guten Tag</span>
             <span class="cloud-word w-7">नमस्ते</span>
             <span class="cloud-word w-8">Hej</span>
             <span class="cloud-word w-9">Tere</span>
             <span class="cloud-word w-10">Ciao</span>
-            <span class="cloud-word w-11">Ahoj</span>
+            <span class="cloud-word w-11">Bună ziua</span>
             <span class="cloud-word w-12">Zdraveĭte</span>
             <span class="cloud-word w-13">Góðan dag</span>
             <span class="cloud-word w-14">Jó napot</span>
