--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
             justify-content: center;
             max-width: 1200px;
             padding: 20px;
+            position: relative;
         }
         .side-image {
             width: 300px;
@@ -216,26 +217,6 @@
         }
         /* --- EDUCATION DESIGN --- */
         .education-container {
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-            width: 100%;
-        }
-        .education-card {
-            background: rgba(255,255,255,0.1);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(52, 152, 219, 0.4);
-            opacity: 0;
-            transform: translateY(20px);
-            transition: opacity 0.5s ease, transform 0.5s ease;
-            transition-delay: calc(var(--idx) * 0.3s);
-        }
-        .text-content.animate .education-card {
-            opacity: 1;
-            transform: translateY(0);
-        }
-        .education-container {
             position: relative;
             width: 40%;
             height: 400px;
@@ -257,11 +238,11 @@
             background: var(--primary);
             border-radius: 50%;
             transform: scale(0);
-            transition: transform 0.5s ease;
+            animation: dotAppear 0.5s ease forwards;
             box-shadow: 0 0 10px var(--primary);
         }
-        .dot.active {
-            transform: scale(1);
+        @keyframes dotAppear {
+            to { transform: scale(1); }
         }
         #dot-mumbai {
             left: 70.22%;
@@ -278,21 +259,31 @@
             padding: 10px;
             border-radius: 5px;
             opacity: 0;
-            transition: opacity 0.5s ease;
+            animation: fadeInItem 0.5s ease forwards;
         }
-        .education-item.active {
-            opacity: 1;
+        @keyframes fadeInItem {
+            to { opacity: 1; }
         }
-        .line {
+        .line-container {
             position: absolute;
-            top: 50%;
-            left: 100%;
-            height: 2px;
-            background: linear-gradient(to right, #ffffff, var(--primary));
-            width: 0;
-            transition: width 1s ease-in-out;
-            transform: translateY(-50%);
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             z-index: 10;
+            pointer-events: none;
+        }
+        .line-path {
+            stroke: var(--primary);
+            stroke-width: 2;
+            fill: none;
+            stroke-dasharray: 300;
+            stroke-dashoffset: 300;
+            animation: drawLine 1.5s ease-out forwards;
+            filter: drop-shadow(0 0 5px var(--primary));
+        }
+        @keyframes drawLine {
+            to { stroke-dashoffset: 0; }
         }
         /* --- NAVIGATION UI --- */
         .nav-ui {
@@ -446,7 +437,10 @@
                             details: "Focus areas: Basics of Electrical Engineering, Electrical Circuits and Networks, AC Machines, Power Electronics, Microcontrollers and Applications.",
                             id: "diploma",
                             dot: "mumbai",
-                            top: "45%"
+                            itemTop: 45,
+                            itemLeft: 0,
+                            dotTop: 39.44,
+                            dotLeft: 70.22
                         },
                         {
                             title: "University of Mumbai, India",
@@ -454,7 +448,10 @@
                             details: "Focus areas: Power Supply Systems, Electrical Networks, Electrical Machines, Power Electronics, Drives and Control, Environmental Management.",
                             id: "bachelor",
                             dot: "mumbai",
-                            top: "55%"
+                            itemTop: 55,
+                            itemLeft: 0,
+                            dotTop: 39.44,
+                            dotLeft: 70.22
                         },
                         {
                             title: "Hochschule Stralsund, Germany",
@@ -462,7 +459,10 @@
                             details: "Focus areas: Vehicle Management Systems, Vehicle Simulation and Test Drives, System Theory, Hydrogen Technology, Control of Electric Drives.",
                             id: "master",
                             dot: "stralsund",
-                            top: "20%"
+                            itemTop: 20,
+                            itemLeft: 0,
+                            dotTop: 19.83,
+                            dotLeft: 53.61
                         }
                     ]
                 },
@@ -603,7 +603,10 @@
                             details: "Schwerpunktfächer: Grundlagen der Elektrotechnik, Elektrische Schaltungen und Netzwerke, Wechselstrommaschinen, Leistungselektronik, Mikrocontroller und Anwendungen.",
                             id: "diploma",
                             dot: "mumbai",
-                            top: "45%"
+                            itemTop: 45,
+                            itemLeft: 0,
+                            dotTop: 39.44,
+                            dotLeft: 70.22
                         },
                         {
                             title: "University of Mumbai, Indien",
@@ -611,7 +614,10 @@
                             details: "Schwerpunktfächer: Energieversorgungssysteme, Elektrische Netzwerke, Elektrische Maschinen, Leistungselektronik, Antriebe und Steuerung, Umweltmanagement.",
                             id: "bachelor",
                             dot: "mumbai",
-                            top: "55%"
+                            itemTop: 55,
+                            itemLeft: 0,
+                            dotTop: 39.44,
+                            dotLeft: 70.22
                         },
                         {
                             title: "Hochschule Stralsund, Deutschland",
@@ -619,7 +625,10 @@
                             details: "Schwerpunktfächer: Fahrzeugmanagementsysteme, Fahrzeugsimulation und Testfahrt, Systemtheorie, Wasserstofftechnologie, Steuerung elektrischer Antriebe.",
                             id: "master",
                             dot: "stralsund",
-                            top: "20%"
+                            itemTop: 20,
+                            itemLeft: 0,
+                            dotTop: 19.83,
+                            dotLeft: 53.61
                         }
                     ]
                 },
@@ -772,18 +781,13 @@
                 to.classList.add('active');
             }, 800);
         }
-        function activateEducation(itemId, dotId) {
+        function activateEducation(itemId, dotId, animationDelay) {
             const item = document.getElementById(`item-${itemId}`);
             const dot = document.getElementById(`dot-${dotId}`);
-            if (item && dot) {
-                item.classList.add('active');
-                dot.classList.add('active');
-                const line = item.querySelector('.line');
-                const itemRect = item.getBoundingClientRect();
-                const dotRect = dot.getBoundingClientRect();
-                const lineWidth = dotRect.left - itemRect.right + (dotRect.width / 2);
-                line.style.width = `${lineWidth}px`;
-            }
+            const path = document.getElementById(`path-${itemId}`);
+            if (item) item.style.animationDelay = `${animationDelay}s`;
+            if (dot) dot.style.animationDelay = `${animationDelay + 0.5}s`;
+            if (path) path.style.animationDelay = `${animationDelay + 1}s`;
         }
         function renderSlide() {
             // Fade out content first
@@ -818,11 +822,10 @@
                         html += '<div class="education-container">';
                         slide.educations.forEach((ed) => {
                             html += `
-                                <div class="education-item" id="item-${ed.id}" style="top: ${ed.top};">
+                                <div class="education-item" id="item-${ed.id}" style="top: ${ed.itemTop}%;">
                                     <h3>${ed.title}</h3>
                                     <h4>${ed.role}</h4>
                                     <p>${ed.details}</p>
-                                    <div class="line"></div>
                                 </div>
                             `;
                         });
@@ -832,6 +835,21 @@
                         html += '<div id="dot-mumbai" class="dot"></div>';
                         html += '<div id="dot-stralsund" class="dot"></div>';
                         html += '</div>';
+                        html += '<svg class="line-container" viewBox="0 0 100 100" preserveAspectRatio="none">';
+                        slide.educations.forEach((ed) => {
+                            // Calculate points: start from right of education container (40% width), mid of item
+                            const startX = 40; // end of education container
+                            const startY = ed.itemTop + 2.5; // approximate mid of item (assuming height ~5%)
+                            const endX = 40 + (60 * (ed.dotLeft / 100)); // map starts at 40%, add % of map width
+                            const endY = ed.dotTop;
+                            // For curve, use bezier
+                            const controlX1 = startX + (endX - startX) * 0.3;
+                            const controlY1 = startY;
+                            const controlX2 = endX - (endX - startX) * 0.3;
+                            const controlY2 = endY;
+                            html += `<path id="path-${ed.id}" class="line-path" d="M${startX},${startY} C${controlX1},${controlY1} ${controlX2},${controlY2} ${endX},${endY}" />`;
+                        });
+                        html += '</svg>';
                     } else {
                         html += `
                             <h2>${slide.title}</h2>
@@ -844,7 +862,6 @@
                         } else {
                             html += `<p>${slide.details}</p>`;
                         }
-                        html += '</div>';
                     }
                 } else if (slide.type === 'end') {
                     html += `
@@ -856,7 +873,6 @@
                             <button class="lang-btn">XING</button>
                         </div>
                     `;
-                    html += '</div>';
                 }
                
                 html += '</div>';
@@ -866,9 +882,9 @@
                 setTimeout(() => {
                     document.querySelector('.text-content')?.classList.add('animate');
                     if (slide.isEducation) {
-                        setTimeout(() => activateEducation('diploma', 'mumbai'), 1000);
-                        setTimeout(() => activateEducation('bachelor', 'mumbai'), 3000);
-                        setTimeout(() => activateEducation('master', 'stralsund'), 5000);
+                        setTimeout(() => activateEducation('diploma', 'mumbai', 1), 1000);
+                        setTimeout(() => activateEducation('bachelor', 'mumbai', 3), 3000);
+                        setTimeout(() => activateEducation('master', 'stralsund', 5), 5000);
                     }
                 }, 100);
             }, 600);
